--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <header class="header">
     <div class="brand">📚 BookFinder</div>
     <nav class="nav">
-      <a href="index.html" aria-current="page">Главная</a>
-      <a href="search.html">Поиск книг</a>
-      <a href="currency.html">Конвертер валют</a>
-      <a href="weather.html">Погода</a>
-      <a href="about.html">О проекте</a>
+      <a href="./index.html" aria-current="page">Главная</a>
+      <a href="./search.html">Поиск книг</a>
+      <a href="./currency.html">Конвертер валют</a>
+      <a href="./weather.html">Погода</a>
+      <a href="./about.html">О проекте</a>
     </nav>
   </header>
 
@@ -29,15 +29,15 @@
     </section>
 
     <section class="cards">
-      <a class="card" href="search.html">
+      <a class="card" href="./search.html">
         <h2>Поиск книг</h2>
         <p>Найдите книги по названию, автору или ключевому слову.</p>
       </a>
-      <a class="card" href="currency.html">
+      <a class="card" href="./currency.html">
         <h2>Конвертер валют</h2>
         <p>Точный пересчёт суммы между валютами.</p>
       </a>
-      <a class="card" href="weather.html">
+      <a class="card" href="./weather.html">
         <h2>Погода</h2>
         <p>Текущая температура и прогноз по городу.</p>
       </a>
@@ -48,6 +48,6 @@
     <p>© 2025 BookFinder. Учебный проект.</p>
   </footer>
 
-  <script type="module" src="/src/pages/home/main.js"></script>
+  <script type="module" src="./home.js"></script>
 </body>
 </html>
