--- a/weather.html
+++ b/weather.html
@@ -9,11 +9,11 @@
   <header class="header">
     <div class="brand">📚 BookFinder</div>
     <nav class="nav">
-      <a href="index.html">Главная</a>
-      <a href="search.html">Поиск книг</a>
-      <a href="currency.html">Конвертер валют</a>
-      <a href="weather.html" aria-current="page">Погода</a>
-      <a href="about.html">О проекте</a>
+      <a href="./index.html">Главная</a>
+      <a href="./search.html">Поиск книг</a>
+      <a href="./currency.html">Конвертер валют</a>
+      <a href="./weather.html" aria-current="page">Погода</a>
+      <a href="./about.html">О проекте</a>
     </nav>
   </header>
 
@@ -34,6 +34,6 @@
     <p>Данные: <a href="https://open-meteo.com/" target="_blank" rel="noopener">Open-Meteo</a></p>
   </footer>
 
-  <script type="module" src="/src/pages/weather/main.js"></script>
+  <script type="module" src="./weather.js"></script>
 </body>
 </html>
