--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
   <header class="header">
     <div class="brand">📚 BookFinder</div>
     <nav class="nav">
-      <a href="index.html">Главная</a>
-      <a href="search.html">Поиск книг</a>
-      <a href="currency.html">Конвертер валют</a>
-      <a href="weather.html">Погода</a>
-      <a href="about.html" aria-current="page">О проекте</a>
+      <a href="./index.html">Главная</a>
+      <a href="./search.html">Поиск книг</a>
+      <a href="./currency.html">Конвертер валют</a>
+      <a href="./weather.html">Погода</a>
+      <a href="./about.html" aria-current="page">О проекте</a>
     </nav>
   </header>
 
@@ -31,6 +31,6 @@
     <p>© 2025 BookFinder.</p>
   </footer>
 
-  <script type="module" src="/src/pages/about/main.js"></script>
+  <script type="module" src="./about.js"></script>
 </body>
 </html>
