--- a/currency.html
+++ b/currency.html
@@ -9,11 +9,11 @@
   <header class="header">
     <div class="brand">📚 BookFinder</div>
     <nav class="nav">
-      <a href="index.html">Главная</a>
-      <a href="search.html">Поиск книг</a>
-      <a href="currency.html" aria-current="page">Конвертер валют</a>
-      <a href="weather.html">Погода</a>
-      <a href="about.html">О проекте</a>
+      <a href="./index.html">Главная</a>
+      <a href="./search.html">Поиск книг</a>
+      <a href="./currency.html" aria-current="page">Конвертер валют</a>
+      <a href="./weather.html">Погода</a>
+      <a href="./about.html">О проекте</a>
     </nav>
   </header>
 
@@ -35,6 +35,6 @@
     <p>Данные: <a href="https://www.frankfurter.app/docs/" target="_blank" rel="noopener">Frankfurter API</a></p>
   </footer>
 
-  <script type="module" src="/src/pages/currency/main.js"></script>
+  <script type="module" src="./currency.js"></script>
 </body>
 </html>
