--- a/search.html
+++ b/search.html
@@ -9,11 +9,11 @@
   <header class="header">
     <div class="brand">📚 BookFinder</div>
     <nav class="nav">
-      <a href="index.html">Главная</a>
-      <a href="search.html" aria-current="page">Поиск книг</a>
-      <a href="currency.html">Конвертер валют</a>
-      <a href="weather.html">Погода</a>
-      <a href="about.html">О проекте</a>
+      <a href="./index.html">Главная</a>
+      <a href="./search.html" aria-current="page">Поиск книг</a>
+      <a href="./currency.html">Конвертер валют</a>
+      <a href="./weather.html">Погода</a>
+      <a href="./about.html">О проекте</a>
     </nav>
   </header>
 
@@ -32,6 +32,6 @@
     <p>Данные: <a href="https://openlibrary.org/developers/api" target="_blank" rel="noopener">Open Library API</a></p>
   </footer>
 
-  <script type="module" src="/src/pages/search/main.js"></script>
+  <script type="module" src="./search.js"></script>
 </body>
 </html>
